--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,13 @@ jobs:
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         port: 21
-        local-dir: ./dist/  # Asegúrate de que ./dist/ contiene solo los archivos y no una subcarpeta.
-        server-dir: /public_html/
+    - name: 📂 Subir archivos a Hostinger vía FTP
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+      with:
+        server: ${{ secrets.FTP_SERVER }}
+        username: ${{ secrets.FTP_USERNAME }}
+        password: ${{ secrets.FTP_PASSWORD }}
+        port: 21
+        local-dir: ./dist/  # Solo sube los archivos de la carpeta dist
+        server-dir: /home/u418653278/domains/avaldez0.com/public_html/
+
