--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,5 +45,5 @@ jobs:
         password: ${{ secrets.FTP_PASSWORD }}
         port: 21
         local-dir: ./dist/  # Solo sube los archivos de la carpeta dist
-        server-dir: /home/u418653278/domains/avaldez0.com/public_html/
+        server-dir: /
 
